Issue #17857: Prevent build failures with pre-3.5.0 versions of sqlite3, such as was shipped with Centos 5 and Mac OS X 10.4.

This bug was already fixed in issue14572 for 2.7 only and then it was
backported back from 3.3 in issue17073.